feat: remove nginx

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile.caprover
+          file: ./Dockerfile.prod
           push: true
           tags: ${{ env.IMAGE_URL }}
 
